sample/asm/errors/single_definition_rule/lib.asm
.function: lib::foo/1
    print (arg 1 0)
    return
.end
